2013-01-18  Olaf Bergmann  <bergmann@tzi.org>

	* configure.in: new option --with-tests to enable unit tests

	* tests/testdriver.c: unit tests for parser functions

	* pdu.c (coap_pdu_parse): new PDU parser for Klaus-encoding
	according to coap-13

	* net.c (coap_read): call coap_pdu_parse() to check PDU integrity

	* option.c: Klaus-encoding for coap-13, including new option
	iterator interface

2012-11-20  Olaf Bergmann  <bergmann@tzi.org>

	* net.c (next_option_safe): made option parsing more robust in
	presence of option jumps

	* pdu.h: new option codes from draft-ietf-core-coap-12

	* option.c (coap_opt_setlength): new function to set option length

	* uri.c (make_decoded_option): use coap_opt_setlength() instead of
	obsolete macro COAP_OPT_SETLENGTH.

2012-11-19  Olaf Bergmann  <bergmann@tzi.org>

	* uri.c (make_decoded_option): use coap_opt_encode() instead of writing

2012-11-03  Olaf Bergmann  <bergmann@tzi.org>

	* net.c (coap_read): read new option encoding

2012-11-01  Olaf Bergmann  <bergmann@tzi.org>

	* option.c (coap_opt_size, coap_opt_value, coap_opt_length):
	several functions to access fields of options (possibly preceeded
	by option jump)

2012-10-25  Olaf Bergmann  <bergmann@tzi.org>

	* option.c (coap_opt_encode): new function for option encoding
	with option jumps

2012-03-23  Olaf Bergmann  <bergmann@tzi.org>

	* examples/client.c (clear_obs): clear observation relationship after
	user-specified duration

2012-03-21  Olaf Bergmann  <bergmann@tzi.org>

	* resource.c (print_wellknown): filtering by attributes

2012-03-19  Olaf Bergmann  <bergmann@tzi.org>

	* pdu.c (coap_add_option): allow more than 15 options.

2012-03-15  Olaf Bergmann  <bergmann@tzi.org>

	* examples/client.c (cmdline_uri): split path and query here to
	make it easier to include these options in subsequent requests for
	block transfer.

2012-03-14  Olaf Bergmann  <bergmann@tzi.org>

	* examples/etsi_iot_01.c: Support for POST, PUT, DELETE on /test
