@@ -240,6 +240,7 @@ hnd_post_test(coap_context_t  *ctx, struct coap_resource_t *resource,
 	      coap_address_t *peer, coap_pdu_t *request, str *token,
 	      coap_pdu_t *response) {
   coap_opt_iterator_t opt_iter;
+  coap_opt_t *option;
   coap_payload_t *test_payload;
   size_t len;
   size_t l = 6 + sizeof(void *);
@@ -276,10 +277,10 @@ hnd_post_test(coap_context_t  *ctx, struct coap_resource_t *resource,
     coap_register_handler(r, COAP_REQUEST_DELETE, hnd_delete_resource);
 
     /* set media_type if available */
-    if (coap_check_option(request, COAP_OPTION_CONTENT_TYPE, &opt_iter)) {
+    option = coap_check_option(request, COAP_OPTION_CONTENT_TYPE, &opt_iter);
+    if (option) {
       test_payload->media_type = 
-	coap_decode_var_bytes(COAP_OPT_VALUE(opt_iter.option),
-			      COAP_OPT_LENGTH(opt_iter.option));
+	coap_decode_var_bytes(COAP_OPT_VALUE(option), COAP_OPT_LENGTH(option));
     }
 
     coap_add_resource(ctx, r);
@@ -305,6 +306,7 @@ hnd_put_test(coap_context_t  *ctx, struct coap_resource_t *resource,
 	      coap_address_t *peer, coap_pdu_t *request, str *token,
 	      coap_pdu_t *response) {
   coap_opt_iterator_t opt_iter;
+  coap_opt_t *option;
   coap_payload_t *payload;
   size_t len;
   unsigned char *data;
@@ -331,11 +333,11 @@ hnd_put_test(coap_context_t  *ctx, struct coap_resource_t *resource,
   payload->length = len;
   memcpy(payload->data, data, len);
 
-  if (coap_check_option(request, COAP_OPTION_CONTENT_TYPE, &opt_iter)) {
+  option = coap_check_option(request, COAP_OPTION_CONTENT_TYPE, &opt_iter);
+  if (option) {
     /* set media type given in request */
     payload->media_type = 
-      coap_decode_var_bytes(COAP_OPT_VALUE(opt_iter.option),
-			    COAP_OPT_LENGTH(opt_iter.option));
+      coap_decode_var_bytes(COAP_OPT_VALUE(option), COAP_OPT_LENGTH(option));
   } else {
     /* set default value */
     payload->media_type = COAP_MEDIATYPE_TEXT_PLAIN;
@@ -409,6 +411,7 @@ hnd_get_separate(coap_context_t  *ctx, struct coap_resource_t *resource,
 		 coap_address_t *peer, coap_pdu_t *request, str *token,
 		 coap_pdu_t *response) {
   coap_opt_iterator_t opt_iter;
+  coap_opt_t *option;
   coap_opt_filter_t f;
   unsigned long delay = 5;
 
@@ -427,13 +430,13 @@ hnd_get_separate(coap_context_t  *ctx, struct coap_resource_t *resource,
   
   coap_option_iterator_init(request, &opt_iter, f);
   
-  while (coap_option_next(&opt_iter)) {
-    if (strncmp("delay=", (char *)COAP_OPT_VALUE(opt_iter.option), 6) == 0) {
+  while ((option = coap_option_next(&opt_iter))) {
+    if (strncmp("delay=", (char *)COAP_OPT_VALUE(option), 6) == 0) {
       int i;
       unsigned long d = 0;
       
-      for (i = 6; i < COAP_OPT_LENGTH(opt_iter.option); ++i)
-	d = d * 10 + COAP_OPT_VALUE(opt_iter.option)[i] - '0';
+      for (i = 6; i < COAP_OPT_LENGTH(option); ++i)
+	d = d * 10 + COAP_OPT_VALUE(option)[i] - '0';
 
       /* don't allow delay to be less than COAP_RESOURCE_CHECK_TIME*/
       delay = d < COAP_RESOURCE_CHECK_TIME_SEC 
